tests/frontend_tests/error_missing_semicolon.c
int main() {
  // error: expected ';' after '10'
  return 10
}
